# squire

./: .gitignore  LICENSE  MIGRATION.md  README.md  pyproject.toml
examples/: worker_config.yaml
skill/: SKILL.md
src/squire/: __init__.py  api.py  cli.py  client.py  config.py  corpus.py  metrics.py  providers.py  session.py
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_config.py  test_corpus.py  test_metrics.py  test_providers.py  test_session.py
