[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "squire"
version = "0.1.0"
description = "A cheap-LLM squire for your AI coding agent: handles bulk reading and drafting so the main model can focus on decisions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mitchell Griffin" }]
keywords = ["llm", "agent", "claude", "delegation", "token-savings", "groq", "openai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "openai>=2.0,<3",
  "pyyaml>=6.0,<7",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=9.0,<10"]

[project.scripts]
ask-worker      = "squire.cli:ask_main"
worker-write    = "squire.cli:write_main"
extract-session = "squire.cli:extract_main"
worker-stats    = "squire.cli:stats_main"
squire          = "squire.cli:dispatcher_main"

[project.urls]
Homepage = "https://github.com/mitchellgriffin/squire"
Repository = "https://github.com/mitchellgriffin/squire"
Issues = "https://github.com/mitchellgriffin/squire/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
